Finalized Main, ShoppingCart and CartItem modules